--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -8,6 +8,8 @@ table {
         padding: 8px 30px;
     }
     .ttl {
+        font-size: large;
+        font-weight: bold;
         background-color: #f2f2f2;
     }
 }
