--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,17 +1,22 @@
-<h2>Products</h2>
-<div *ngFor="let product of products">
-  <h4>
-    <a 
-      [title]="product.name + ' detail'"
-      [routerLink]="['/products', product.id]">
-      {{ product.name }}
-    </a>
-  </h4>
-  <p *ngIf="product.description">
-    Description: {{ product.description }}
-  </p>
-  <div class="button-div">
-    <button type="submit" [class]="shareBtn" (click)="share()">Share</button>
-    <app-product-alerts [product]="product" (notify)="onNotify()"></app-product-alerts>
+<div class="py-3" [ngStyle]="{'width': '100%'}">
+  <div class="d-flex justify-content-between align-items-center">
+    <h2 class="py-3">Products List</h2>
+    <button type="submit" class="btn btn-info">Add new product</button>
+  </div>
+  <div *ngFor="let product of products" class="pb-4">
+    <h6>
+      <a 
+        [title]="product.name + ' detail'"
+        [routerLink]="['/products', product.id]">
+        {{ product.name }}
+      </a>
+    </h6>
+    <p *ngIf="product.description">
+      Description: {{ product.description }}
+    </p>
+    <div class="button-div">
+      <button type="submit" [class]="shareBtn" (click)="share()">Share</button>
+      <app-product-alerts [product]="product" (notify)="onNotify()"></app-product-alerts>
+    </div>
   </div>
 </div>
