--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,14 @@
-<a [routerLink]="['/']">
-  <h1>My Store</h1>
-</a>
-
-<a class="button fancy-button">Checkout</a>
+<div class="d-flex justify-content-end container">
+  <div class="col-md-6">
+    <a [routerLink]="['/']">
+      <h1>My Store</h1>
+    </a>
+  </div>
+  
+  <div class="col-md-6 text-right">
+    <a class="button fancy-button">Checkout</a>
+  </div>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
